--- a/Anki/ankiblog.html
+++ b/Anki/ankiblog.html
@@ -56,8 +56,8 @@
                                     </header>
 
                                     <p> Frankly, I have been hanging around in the jungle for a way longer time, although only developing the rigorosity to actually get somewhere reasonable in the last two years.
-                                    So, in this first ever blog post of me, I will give it a shot of explaining of <a href="https://www.youtube.com/watch?v=KeDf-1Wr-Ks">how I got here</a> and why it should be in the best interest of all curiosity-driven human beings to mimic me (at least to some extent).
-                                    As I'm writing these first lines (and by the way, I'm already enjoying my personal freedom of expression), I'm kind of feeling like an artificial intelligence trying to figure out where to head at, including initally failing miserably at it.
+                                    So, in this first-ever blog post of me, I will give it a shot of explaining of <a href="https://www.youtube.com/watch?v=KeDf-1Wr-Ks">how I got here</a> and why it should be in the best interest of all curiosity-driven human beings to mimic me (at least to some extent).
+                                    As I'm writing these first lines (and by the way, I'm already enjoying my personal freedom of expression), I'm kind of feeling like an artificial intelligence trying to figure out where to head, including initially failing miserably at it.
                                     So, as you may have already noticed, I like to wildly reference music & popular culture, so you can never be sure if a certain link will be actually something useful or, like in the last case, just a random thing.
                                     </p>
 
@@ -65,23 +65,23 @@
                                         The backstory
                                     </h4>
                                     <p>
-                                        I distictly remember that, in the 10th grade, I was (or rather my parents did) noticing a continuous and concerning decline in my grades in  English.
+                                        I distinctly remember that, in the 10th grade, I was (or rather my parents did) noticing a continuous and concerning decline in my grades in  English.
                                         Being finally able to think more out-of-the-box as an adolescent, I was not really interested in studying vocabulary the old-fashioned way, i.e. by desperately trying to cram all of the due vocab into my brain the days before the test, like so many of us did and still continue to do today.
                                         So, I used the by the time already well-loved mobile internet on my first smartphone to find something better, something appealing.
-                                        That's where I first stumbled upon <a href="https://play.google.com/store/apps/details?id=com.ichi2.anki&hl=en&gl=US">AnkiDroid</a>, which was nothing else than an application for spaced repetition, of which I already had some basic experience with, since my mother bought me a clunky program called <a href="https://www.phase-6.de/">Phase 6</a>, which was a desktop application with nearly no modifiying allowed.
+                                        That's where I first stumbled upon <a href="https://play.google.com/store/apps/details?id=com.ichi2.anki&hl=en&gl=US">AnkiDroid</a>, which was nothing else than an application for spaced repetition, with which I already had some basic experience since my mother bought me a clunky program called <a href="https://www.phase-6.de/">Phase 6</a>, which was a desktop application with nearly no modifying allowed.
                                         Motivated by my own initiative, I started to use AnkiDroid almost every day (proof is my review heatmap, not my memory of course), typing in the lectorial vocab and waiting for its magic to happen.
                                         And it did.
-                                        I must have been so convinced that the year after, when I dropped the dreary Latin and replaced it for the sexy Spanish, I decided to excel at Spanish vocab by employing the newly found AnkiDroid strategy right off the bat.
-                                        Finally being among the very good pupils in a language must have surely provided me with decent self-confidence and a laid-back (no stress prior to exams) feeling of being able to learn anything, if only I would be willing to put in the daily effort.
+                                        I must have been so convinced that the year after, when I dropped the dreary Latin and replaced it with the sexy Spanish, I decided to excel at Spanish vocabulary by employing the newly found AnkiDroid strategy right off the bat.
+                                        Finally being among the very good pupils in a language must have surely provided me with decent self-confidence and a laid-back (no stress before exams) feeling of being able to learn anything, if only I would be willing to put in the daily effort.
                                     </p>
-                                    <figure>
-                                        <img src="../images/Anki/2013_heatmap.png" alt="Anki review heatmap">
+                                    <figure style="display: block; margin: auto;">
+                                        <img src="../images/Anki/2013_heatmap.png" alt="Anki review heatmap of 2013">
                                         <figcaption>The ancient discovery, 2013</figcaption>
                                     </figure>
                                     <p>
                                     As a happy user, I pursued this way until the end of high school, where I can proudly say that I got very good grades in English and Spanish after all.
                                     Afterwards, I began to study mathematics, where I wouldn't need any of this knowledge anymore (or so I thought), so I stopped using AnkiDroid, letting all the repetitions and the acquired knowledge fall into pitch-darkness.
-                                    I was obviously making mistake, but fair enough: I only viewed Anki as a tool, which served a purpose.
+                                    I was obviously making a mistake, but fair enough: I only viewed Anki as a tool, which served a purpose.
                                     </p>
                                 
                                     <h4>
