--- a/Anki/ankiblog.html
+++ b/Anki/ankiblog.html
@@ -138,8 +138,8 @@
 										I already loved Portuguese before I haven't even learned to love Portuguese.
 										When I met my lovely girlfriend from Rio de Janeiro, I was immediately hooked by how nice Portuguese sounded, and I thought, after having reached a certain level in Spanish, that it would be a good idea to pair 'em up during learning flashcards. For multiple reasons, of course. First, it's similar, thus a second one is easier. Second, the whole package is more than the sum of its parts.
 										Third, I would have plenty of free practice, when I would be with my girlfriend.
-										And fourth, I would be able to understand the lyrics of my favorite Brazilian songs.
-										<iframe src="https://open.spotify.com/track/59HAcR0hVejI7Od0kgibFg?si=73b0dd59b4c04c16" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+										And fourth, I would be able to understand the lyrics of my favorite Brazilian 
+										<a href="https://open.spotify.com/track/59HAcR0hVejI7Od0kgibFg?si=73b0dd59b4c04c16" target="_blank">song</a>s.
 									</p>
 									<p>
 										So, my Anki research found that for my usecase, these two deck would be best to start with:
@@ -147,8 +147,10 @@
 										Though they are really cool projects, they are automatically generated, I assumed, so there's a lot of room to customize them.
 										For example, the Conjugation Trainer includes all irregular verbs, which are not merged by category (like in Ultimate Spanish Conjugation), so I find a way on my own. There are the top 1000 most frequent verbs, and if you exclude all the regular, you are left with about 100 irregular ones.
 										Managable, huh?
-										And the Portuguese 5000 deck had one example sentence at least (which is very import for a lot of reason, name them pronunciation, context, etc.), but I terribly need the exclusion hints, which I had to add myself.
-										It being a very tedious work indeed, by doing it incrementally, it's also manageable, since you quickly run into something like "voltar, regressar, retornar, devolver", which is very annoying to edit correctly (maybe I should write some code doing this?).
+										And the Portuguese 5000 deck had one example sentence at least (which is very import for a lot of reasons, name them pronunciation, context, etc.), but I terribly need the exclusion hints, which I had to add myself.
+										It being a very tedious work indeed, by doing it incrementally, it's also manageable, since you quickly run into something like "voltar, regressar, retornar, devolver" (they can all be described with the same word), which is very annoying to edit correctly (maybe I should write some code doing this?).'
+										
+
 									</p>
 
 
@@ -158,7 +160,7 @@
 								</ul>	
 							</div>
 						</div>
-					</div>¥
+					</div>
 				</div>
 			</section>
 			
