--- a/index.html
+++ b/index.html
@@ -5,124 +5,147 @@
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
-	<head>
-		<title>Robin Köstler</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body>
 
-		<!-- Header -->
-			<header id="header" class="alt">
-				<div class="logo"><a href="index.html">Robin Köstler's personal page<span></span></a></div>
-				<a href="#menu" class="toggle"><span>Menu</span></a>
-			</header>
+<head>
+	<title>Robin Köstler</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+</head>
 
-		<!-- Nav -->
-			<nav id="menu">
-				
-				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="Anki/ankiblog.html">Anki</a></li>
-					<li><a href="#">Music</a></li>
-				</ul>
-			</nav>
+<body>
 
-		<!-- Banner -->
-		<!--
+	<!-- Header -->
+	<header id="header" class="alt">
+		<div class="logo"><a href="index.html">Robin Köstler's personal page<span></span></a></div>
+		<a href="#menu" class="toggle"><span>Menu</span></a>
+	</header>
+
+	<!-- Nav -->
+	<nav id="menu">
+
+		<ul class="links">
+			<li><a href="index.html">Home</a></li>
+			<li><a href="Anki/ankiblog.html">Anki</a></li>
+			<li><a href="#">Music</a></li>
+		</ul>
+	</nav>
+
+	<!-- Banner -->
+	<!--
 			To use a video as your background, set data-video to the name of your video without
 			its extension (eg. images/banner). Your video must be available in both .mp4 and .webm
 			formats to work correctly.
 		-->
-			<section id="banner" data-video="images/banner">
-				<div class="inner">
-					<p>I work on fully homomorphic encryption at the <a href="https://wwwfr.uni.lu/snt/people/robin_koestler">University of Luxembourg</a>.<br />
-						<br />
-					<a href="#one" class="button special scrolly">Work in Academia</a>
-					<a href="#two" class="button special scrolly">Special interests</a>
-					<a href="#four" class="button special scrolly">Contact Information</a>
-				</p>
-				</div>
-			</section>
+	<section id="banner" data-video="images/banner">
+		<div class="inner">
+			<p>I work on fully homomorphic encryption at the <a
+					href="https://wwwfr.uni.lu/snt/people/robin_koestler">University of Luxembourg</a>.<br />
+				<br />
+				<a href="#one" class="button special scrolly">Work in Academia</a>
+				<a href="#two" class="button special scrolly">Special interests</a>
+				<a href="#four" class="button special scrolly">Contact Information</a>
+			</p>
+		</div>
+	</section>
 
-		<!-- One -->
-			<section id="one" class="wrapper style2">
-				<div class="inner">
-					<div>
-						<div class="box">
-							<!-- <div class="image fit">
+	<!-- One -->
+	<section id="one" class="wrapper style2">
+		<div class="inner">
+			<div>
+				<div class="box">
+					<!-- <div class="image fit">
 								<img src="images/pic01.jpg" alt="" />
 							</div> -->
-							<div class="content">
-								<header class="align-center">
-									<h2>Work in Cryptography</h2>
-									<p>Currently, I am a Ph.D. student in the <a href="http://www.crypto-uni.lu/index.html">Applied Crypto Group</a> at the <a href="https://wwwen.uni.lu/">University of Luxembourg</a> under the supervision of <a href="http://www.crypto-uni.lu/jscoron/index.html">Prof. Jean-Sébastien Coron</a>.</p>
-								</header>
-								<hr />
-								<p>My research interests are in the area of cryptography, in particular in the design and implementation of cryptographic protocols and algorithms.
-									 I am currently working on <a href="https://en.wikipedia.org/wiki/Homomorphic_encryption">fully homomorphic encryption (FHE)</a>, which allows to perform arbitrary computations on encrypted data.
-									  My goal is to improve the efficiency of the FHE bootstrapping, which is the pivotal procedure due to which FHE still remains not-so-much practical.</p>
-								<p> I did <a href="https://robinkoestler.github.io/A-survey-on-modern-fully-homomorphic-encryption">a survey on modern fully homomorphic encryption in my master's thesis</a>, where I implemented and analysed the general bootstrapping approach presented in <a href="https://eprint.iacr.org/2021/691.pdf">this paper</a> (2021). </p>
-								<h3>Short Curriculum vitae</h3>
-								<ul>
-									<li>2020: B.Sc. in mathematics at the <a href="https://www.uni-bayreuth.de/en">University of Bayreuth</a> under the supervision of <a href="http://www.mathe2.uni-bayreuth.de/stoll/">Prof. Dr. Michael Stoll</a></li>
-									<li>2022: M.Sc. in mathematics at the <a href="https://uni-freiburg.de/en/" onclick="openInNewBackgroundTab(event)">University of Freiburg</a> under the supervision of <a href="https://math.commelin.net/">Dr. Johannes Commelin</a></li>
-								</ul>
-								<h3>Presency at:</h3>
-								<ul>
-									<li><a href="https://crypto.stackexchange.com/users/109673/the-dice-man">StackOverflow for Cryptography</a></li>
-									<li><a href="https://github.com/robinkoestler">GitHub</a></li>
-								</ul>	
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-			
-			<!-- Two -->
-			<section id="two" class="wrapper style3">
-				<div class="inner">
 					<div class="content">
 						<header class="align-center">
-							<h2>Special interests</h2>
+							<h2>Work in Cryptography</h2>
+							<p>Currently, I am a Ph.D. student in the <a
+									href="http://www.crypto-uni.lu/index.html">Applied Crypto Group</a> at the <a
+									href="https://wwwen.uni.lu/">University of Luxembourg</a> under the supervision of
+								<a href="http://www.crypto-uni.lu/jscoron/index.html">Prof. Jean-Sébastien Coron</a>.
+							</p>
 						</header>
 						<hr />
-					</div>
-					
-					<div id="flexgrid">
-						<div>
-							<header>
-								<h3>Music</h3>
-							</header>
-							<p>I'm a passionate musician, playing guitar and piano.</p>
-							<ul class="actions">
-								<li><a href="#" class="button alt">Explore my musical journey</a></li>
-							</ul>
-						</div>
-						<div>
-							<header>
-								<h3>Anki</h3>
-							</header>
-							<p><b><a href="https://apps.ankiweb.net/">Anki</a></b> is a powerful tool for efficiently learning flashcards, i.e. any type of information that is digestible.</p>
-							<ul class="actions">
-								<li><a href="Anki/ankiblog.html" class="button alt">Discover my blog</a></li>
-							</ul>
-						</div>
-						<div>
-							<header>
-								<h3>Miscellaneous</h3>
-							</header>
-						</div>
-					</div>
-					<div>
-						<hr />
+						<p>My research interests are in the area of cryptography, in particular in the design and
+							implementation of cryptographic protocols and algorithms.
+							I am currently working on <a
+								href="https://en.wikipedia.org/wiki/Homomorphic_encryption">fully homomorphic encryption
+								(FHE)</a>, which allows to perform arbitrary computations on encrypted data.
+							My goal is to improve the efficiency of the FHE bootstrapping, which is the pivotal
+							procedure due to which FHE still remains not-so-much practical.</p>
+						<p> I did <a
+								href="https://robinkoestler.github.io/A-survey-on-modern-fully-homomorphic-encryption">a
+								survey on modern fully homomorphic encryption in my master's thesis</a>, where I
+							implemented and analysed the general bootstrapping approach presented in <a
+								href="https://eprint.iacr.org/2021/691.pdf">this paper</a> (2021). </p>
+
+						<h3>Short Curriculum vitae</h3>
+						<ul>
+							<li>2020: B.Sc. in mathematics at the <a href="https://www.uni-bayreuth.de/en">University of
+									Bayreuth</a> under the supervision of <a
+									href="http://www.mathe2.uni-bayreuth.de/stoll/">Prof. Dr. Michael Stoll</a></li>
+							<li>2022: M.Sc. in mathematics at the <a href="https://uni-freiburg.de/en/"
+									onclick="openInNewBackgroundTab(event)">University of Freiburg</a> under the
+								supervision of <a href="https://math.commelin.net/">Dr. Johannes Commelin</a></li>
+						</ul>
+						<h3>Presency at:</h3>
+						<ul>
+							<li><a href="https://crypto.stackexchange.com/users/109673/the-dice-man">StackOverflow for
+									Cryptography</a></li>
+							<li><a href="https://github.com/robinkoestler">GitHub</a></li>
+						</ul>
 					</div>
 				</div>
-			</section>
+			</div>
+		</div>
+	</section>
 
-		<!-- Below is a example of a two column layout -->
-			<!-- Three
+	<!-- Two -->
+	<section id="two" class="wrapper style3">
+		<div class="inner">
+			<div class="content">
+				<header class="align-center">
+					<h2>Special interests</h2>
+				</header>
+				<hr />
+			</div>
+
+			<div id="flexgrid">
+				<div>
+					<header>
+						<h3>Music</h3>
+					</header>
+					<p>I'm a passionate musician, playing guitar and piano.</p>
+					<ul class="actions">
+						<li><a href="#" class="button alt">Explore my musical journey</a></li>
+					</ul>
+				</div>
+				<div>
+					<header>
+						<h3>Anki</h3>
+					</header>
+					<p><b><a href="https://apps.ankiweb.net/">Anki</a></b> is a powerful tool for efficiently learning
+						flashcards, i.e. any type of information that is digestible.</p>
+					<ul class="actions">
+						<li><a href="Anki/ankiblog.html" class="button alt">Discover my blog</a></li>
+					</ul>
+				</div>
+				<div>
+					<header>
+						<h3>Miscellaneous</h3>
+					</header>
+					<p>To be announced</p>
+				</div>
+			</div>
+			<div>
+				<hr />
+			</div>
+		</div>
+	</section>
+
+	<!-- Below is a example of a two column layout -->
+	<!-- Three
 			<section id="three" class="wrapper style2">
 				<div class="inner">
 					<div class="grid-style">
@@ -163,21 +186,21 @@
 				</div>
 			</section> -->
 
-		<!-- Four -->
-			<section id="four" class="wrapper style3">
-				<div class="inner">
+	<!-- Four -->
+	<section id="four" class="wrapper style3">
+		<div class="inner">
 
-					<header class="align-center">
-						<h2>Contact Information</h2>
-						<p>firstname.lastname@uni.lu</p>
-					</header>
+			<header class="align-center">
+				<h2>Contact Information</h2>
+				<p>firstname.lastname@uni.lu</p>
+			</header>
 
-				</div>
-			</section>
-		
-		<!-- below is a template for a "Formular" -->
-		<!-- Footer -->
-			<!-- <footer id="footer" class="wrapper">
+		</div>
+	</section>
+
+	<!-- below is a template for a "Formular" -->
+	<!-- Footer -->
+	<!-- <footer id="footer" class="wrapper">
 				<div class="inner">
 					<section>
 						<div class="box">
@@ -219,30 +242,30 @@
 				</div>
 			</footer> -->
 
-			<div class="copyright">
-				<br
-				Powered by: <a href="https://templated.co/">Templated.co</a>.
-				<br>
-				All pictures are copyright of Robin Köstler unless stated otherwise.
-			</div>
+	<div class="copyright">
+		<br Powered by: <a href="https://templated.co/">Templated.co</a>.
+		<br>
+		All pictures are copyright of Robin Köstler unless stated otherwise.
+	</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/skel.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
-			<!-- usage: onclick="openInNewBackgroundTab(event)" -->
-			<script>
-				function openInNewBackgroundTab(event) {
-				event.preventDefault(); // Prevents the default link behavior
-				var url = event.target.href;
-				var newTab = window.open(url, '_blank');
-				newTab.blur(); // Move the focus away from the new tab
-				window.focus(); // Return the focus to the current page
-				}
-			</script>
-	</body>
+	<!-- usage: onclick="openInNewBackgroundTab(event)" -->
+	<script>
+		function openInNewBackgroundTab(event) {
+			event.preventDefault(); // Prevents the default link behavior
+			var url = event.target.href;
+			var newTab = window.open(url, '_blank');
+			newTab.blur(); // Move the focus away from the new tab
+			window.focus(); // Return the focus to the current page
+		}
+	</script>
+</body>
+
 </html>
